# FinGPT-Terminal

./: .fingpt_history  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: README.md  modal_finr1.py
openbb_terminal/core/models/: base_model.py  credentials_model.py  preferences_model.py  profile_model.py  system_model.py  user_model.py
src/: __init__.py  agent.py  auth.py  capabilities.py  completion.py  context.py  display.py  main.py  menus.py  router.py  verbs.py
src/commands/: __init__.py  alt.py  crypto.py  etf.py  forex.py  gov.py  macro.py  news.py  portfolio.py  stocks.py  stocks_dps.py  stocks_fa.py  stocks_gov.py  stocks_ta.py
src/data/: alt.py  analytics.py  calendars.py  cex.py  cftc.py  citydata.py  clinicaltrials.py  crypto.py  cryptox.py  defillama.py  deribit.py  dev.py  devdata.py  equities.py  fedreg.py  geo.py  gov.py  govalt.py  hiring.py  http.py  infra.py  intl.py  legal.py  macro.py  markets.py  markets_ref.py  metrics.py  nasa.py  news.py  openfda.py  owid.py  perps.py  rates.py  risk.py  science.py  screener.py  sec_xbrl.py  snapshot.py  sources.py  spending.py  (+6 more)
