[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "finr1-terminal"
version         = "0.1.0"
description     = "The analyst in your terminal"
readme          = "README.md"
requires-python = ">=3.10"
license         = { text = "MIT" }
keywords        = ["finance", "terminal", "ai", "stocks", "crypto", "research", "alpha"]

dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "yahooquery>=2.3.0",        
    "exchange_calendars>=4.5",  
    "pytrends>=4.9.0",          
]

[project.scripts]
finr1 = "src.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["src*"]

[project.urls]
Homepage   = "https://finterminal.framer.website/"
Repository = "https://github.com/Arnav-Gr0ver/FinR1-Terminal"